@@ -351,7 +351,7 @@ ENTRY_PROG 100
 ~
 
 CNCLMSG_PROG STO=DEATH ALL
-	if QUESTMOB($n *) AND !ISFOLLOW($n) AND ISFIGHT($n) AND EVAL('${1 *}' != $1)
+	if QUESTMOB($n *) AND !ISFOLLOW($n) AND EVAL('${1 *}' != $1)
 		mpargset $9 '$%ISFIGHT($n)%'
 		if EVAL($9 == $i)
 			mpgset $n HITS 1
